--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,10 +3,9 @@ name: Continuous Integration
 on:
   pull_request:
     branches: [main]
+    types: [opened, synchronize, reopened, labeled]
   push:
     branches: [main]
-  issue_comment:
-    types: [created]
 
 env:
   TEST_AGENT_PUBLIC_DID_SEED: 000000000000000000000000Trustee9
@@ -20,26 +19,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  pr-trigger:
+  ci-trigger:
     runs-on: ubuntu-20.04
     outputs:
       triggered: ${{ steps.check.outputs.triggered }}
     steps:
-      - uses: khan/pull-request-comment-trigger@master
+      - name: Determine if CI should run
         id: check
-        if: ${{ github.event_name != 'push' }}
-        with:
-          trigger: 'ci test'
-          prefix_only: true
-          reaction: rocket
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+        run: |
+          if [[ "${{ github.event.action }}" == "pull_request" && "${{ github.event.label.name }}" == "ci-test" ]]; then
+              export SHOULD_RUN='true'
+          elif [[ "${{ github.event.action }}" == "pull_request" && "${{ github.event.label.name }}" != "ci-test" ]]; then
+              export SHOULD_RUN='false'
+          else 
+              export SHOULD_RUN='true'
+          fi
+
+          echo "::set-output name=triggered::${SHOULD_RUN}"
 
   validate:
     runs-on: ubuntu-20.04
     name: Validate
-    needs: [pr-trigger]
-    if: needs.pr-trigger.outputs.triggered == 'true' || github.event_name != 'issue_comment'
+    needs: [ci-trigger]
+    if: needs.ci-trigger.outputs.triggered == 'true'
     steps:
       - name: Checkout aries-framework-javascript-ext
         uses: actions/checkout@v2
@@ -68,8 +70,8 @@ jobs:
   integration-test:
     runs-on: ubuntu-20.04
     name: Integration Tests
-    needs: [pr-trigger]
-    if: needs.pr-trigger.outputs.triggered == 'true' || github.event_name != 'issue_comment'
+    needs: [ci-trigger]
+    if: needs.ci-trigger.outputs.triggered == 'true'
 
     strategy:
       matrix:
